--- a/project/pom.xml
+++ b/project/pom.xml
@@ -13,5 +13,13 @@
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
+        </dependency>
+        <dependency>    <groupId>com.googlecode.json-simple</groupId>    <artifactId>json-simple</artifactId>    <version>1.1.1</version></dependency>
+    </dependencies>
 
 </project>
